# pong-arcade

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  makefile  pong.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: pipy_release.yml  publish_release.yml
pong-atari/: __init__.py  ball.py  main.py  meta.py  player.py  pong.py
src/: ball.py  main.py  player.py  pong.py
src/pong_arcade/: ball.py  main.py  meta.py  player.py  pong.py
src/pong_atari/: main.py  player.py  pong.py
tests/: test_pong.py
