[project]
name = "pong-atari"
version = "2.1.0"
description = "Pong written using pygame"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["pong", "atari", "game", "executable", "application"]
authors = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
maintainers = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["pygame"]

[project.urls]
"Homepage" = "https://github.com/jacob-thompson/pong-atari"
"Bug Reports" = "https://github.com/jacob-thompson/pong-atari/issues"

[project.scripts]
pong = "pong_atari.main:main"

[tool.hatch.build]
exclude = [
    "src/pong_atari/data/gfx/controls.png",
    "src/pong_atari/data/gfx/screenshot.png"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"