[project]
name = "pong-arcade"
version = "2.2.0"
description = "Pong written using pygame"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["pong", "arcade", "game", "executable", "application"]
authors = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
maintainers = [
    {name = "Jacob A. Thompson", email = "jacobalthompson@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["pygame"]

[project.urls]
"Homepage" = "https://github.com/jacob-thompson/pong-arcade"
"Bug Reports" = "https://github.com/jacob-thompson/pong-arcade/issues"

[project.scripts]
pong = "pong_arcade.main:main"

[tool.hatch.build]
exclude = [
    "src/pong_arcade/data/gfx/controls.png",
    "src/pong_arcade/data/gfx/screenshot.png"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"